Fixed font size and alignment in mobile screen

--- a/Helping-Hand-PHP-Project-main/css/style.css
+++ b/Helping-Hand-PHP-Project-main/css/style.css
@@ -385,7 +385,7 @@ a:focus {
 .carousel {
   position: relative;
   width: 100%;
-  min-height: 300px;
+  /* min-height: 300px; */
   background: #ffffff;
   margin-bottom: 45px;
 }
@@ -397,7 +397,7 @@ a:focus {
 .carousel .carousel-item {
   position: relative;
   width: 100%;
-  min-height: 300px;
+  /* min-height: 300px; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -408,7 +408,7 @@ a:focus {
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 300px;
+  /* min-height: 300px; */
   text-align: right;
   overflow: hidden;
 }
@@ -443,7 +443,8 @@ a:focus {
 .carousel .carousel-text h1 {
   text-align: center;
   color: #ffffff;
-  font-size: 60px;
+  /* font-size: 60px; */
+  font-size: 4rem;
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -451,7 +452,7 @@ a:focus {
 .carousel .carousel-text p {
   color: #ffffff;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.4rem;
   margin-bottom: 25px;
 }
 
@@ -561,14 +562,44 @@ a:focus {
 }
 
 @media (max-width: 575.98px) {
+
+  .carousel .carousel-btn .btn.btn-custom {
+    font-size: 0.4rem;
+  }
+
   .carousel .carousel-text h1 {
-    font-size: 25px;
+    font-size: 1.2rem;
   }
 
   .carousel .carousel-text .btn {
     padding: 8px 20px;
     font-size: 14px;
     letter-spacing: 0;
+  }
+
+  .carousel .owl-nav .owl-prev,
+  .carousel .owl-nav .owl-next {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #be86be;
+    background: rgba(256, 256, 256, 0.2);
+    font-size: 22px;
+    transition: 0.3s;
+  }
+
+  .carousel .owl-nav {
+    position: absolute;
+    width: 90%;
+    height: 60px;
+    top: calc(50% - 30px);
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    z-index: 9;
+    margin: 20px;
   }
 }
 
@@ -710,7 +741,6 @@ a:focus {
 .about {
   position: relative;
   width: 100%;
-  padding: 45px 0;
 }
 
 .about .section-header {
